# zerobrew

./: CHANGELOG.md  Cargo.toml  Justfile  README.md  install.sh
.github/workflows/: security.yml
site/: eleventy.config.js
site/src/: _redirects  index.njk
site/src/_data/: site.json
site/src/_includes/layouts/: base.njk
site/src/_includes/partials/: site-footer.njk  site-header.njk
site/src/assets/css/: base.css  main.css  tokens.css
site/src/assets/css/components/: site-footer.css  site-header.css
zb_cli/: Cargo.toml
zb_cli/src/: cli.rs  init.rs  main.rs  utils.rs
zb_cli/src/commands/: bundle.rs  completion.rs  gc.rs  info.rs  init.rs  install.rs  list.rs  migrate.rs  mod.rs  reset.rs  run.rs  uninstall.rs  upgrade.rs
zb_core/: Cargo.toml
zb_core/fixtures/: formula_foo.json
zb_core/src/: bottle.rs  lib.rs  resolve.rs
zb_core/src/formula/: bottle.rs  mod.rs  resolve.rs  types.rs
zb_io/: Cargo.toml
zb_io/src/: download.rs  link.rs  materialize.rs
zb_io/src/cellar/: link.rs
zb_io/src/installer/: install.rs
zb_io/src/network/: api.rs  mod.rs  tls.rs
zb_io/src/network/download/: mod.rs  single.rs
